deployment/02-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wireguard
  labels:
    app: wireguard

spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - env:
            - name: ALLOWEDIPS
              value: 0.0.0.0/0
            - name: INTERNAL_SUBNET
              value: 10.13.13.0
            - name: PEERDNS
              value: auto
            - name: PEERS
              value: "1"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: ghcr.io/linuxserver/wireguard
          name: wireguard
          ports:
            - containerPort: 51820
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
      restartPolicy: Always
status: {}
