deployment/01-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami

---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
spec:
  ports:
    - name: wireguard
      port: 51820
      protocol: UDP
  selector:
    app: wireguard
